client/stylesheets/edgardStyle.less
/* ... */
.btn-beige {
  color: white;
  background: @beige;
  border-color: @beige;
  &:hover {
    color: white;
    background-color: @dark-gray;
    border-color: @dark-gray;
  }
  &.active {
    background-color: @darker-red;
    border-color: @darker-red;
  }
}
.btn-social {
  color: @light-blue;
  background: #fff;
  border-color: @light-blue;
  &:hover {
    color: @dark-blue;
  }
  &.active {
    color: white;
    background-color: @darker-red;
    border-color: @darker-red;
  }
}

.btn-lg {
  padding: 15px 35px;
  border-radius: 6px;
  text-transform: uppercase;
  font-weight: normal;
  font-size: 16px;
}
.btn-sm {
  padding: 1px 8px;
}
.btn-xs {
  padding: 1px 8px;
  border-radius: 2px;
  text-transform: uppercase;
  font-size: 10px;
  font-weight: bold;
}
.btn-round {
  border-radius: 500%;
  width: 40px;
  height: 40px;
  font-size: 24px;
  padding: 2px;
}
.btn-square {
  width: 40px;
  height: 40px;
  font-size: 20px;
  padding: 5px;
}



/* Pagination */

.pagination > li > a {
  font-size: 12px;
  color: #fff;
  background-color: @light-gray;
  border: none;
  border-radius: 4px;
  margin: 0 2px;
  padding: 3px 7px;
  &:hover {
    background-color: @light-red;
    color: #fff;
  }
}

.pagination > li:first-child > a, .pagination > li:last-child > a {
  color: @light-gray;
  background-color: #fff;
}

/* Accordion */
.panel-default {
  border-radius: 0 !important;
  border: none;
  box-shadow: none;
}
.panel-default > .panel-heading {
  background-color: #fff;
  border-radius: 0 !important;
  border: none;

  padding: 15px;

  > h4 {
    color: @dark-blue;
    font-size: 14px;
    text-transform: none;
    a {
      color: @dark-blue;
      width: 100%;
      display: inline-block;
    }
  }
  &:hover {
    background-color: @dark-blue;
     > h4 {
       color: #fff;
       a {
         color: #fff;
       }
     }
     .caret {
       border-top: 8px solid #fff;
     }
  }
  a {
    text-decoration: none;
  }
}
.in ~ .panel-heading {
  background-color: @light-blue;
}
.panel-default .caret {
  border-left: 8px solid transparent;
  border-right: 8px solid transparent;
  border-top: 8px solid @light-red;
}


.icon-square {
  width: 40px;
  height: 40px;
  font-size: 20px;
  padding: 5px 10px;
  text-align: center;
  vertical-align: middle;
}

/* Input Fields */
.form-control:focus {
  border-color: @light-blue;
}
#home-search {
  .form-control:focus {
    box-shadow: inset 0 1px 1px @dark-blue;
  }
}
input.input-blue {
  border: @light-blue solid 12px;
  -webkit-box-shadow: inset 0px 0px 0px 7px lighten(@light-blue, 30%);
  -moz-box-shadow: inset 0px 0px 0px 7px lighten(@light-blue, 30%);
  box-shadow: inset 0px 0px 0px 7px lighten(@light-blue, 10%);
  width: 100%;
  height: 80px;
  color: @dark-blue;
}


.form-control::-webkit-input-placeholder {
  color: @dark-blue;
  padding-left: 10px;
}
.form-control:-moz-placeholder {
  color: @dark-blue;
  padding-left: 10px;
}
.form-control::-moz-placeholder {
  color: @dark-blue;
  padding-left: 10px;
}
.form-control:-ms-input-placeholder {
  color: @dark-blue;
  padding-left: 10px;
}




.form-control-feedback {
  margin-right: 40px;
  margin-top: 20px;
  font-size: 22px;
  color: @dark-blue;
}


input.input-gray {
  border: @dark-gray solid 20px;
  background-color: @light-gray;
  width: 100%;
  height: 80px;
}
input.input-beige {
  background-color: @beige;
  height: 40px;

  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  outline: none;
  border: none;
  ::-moz-focus-inner {
    border: 0;
    padding: 0;
  }
}


/* Sort */
div.sort {
  font-size: 18px;
}
.sort .caret {
  border-left: 8px solid transparent;
  border-right: 8px solid transparent;
  border-top: 8px solid @light-red;
}
ul.sort {
  left: inherit;
  border: 0;
  -webkit-box-shadow: none;
  box-shadow: none;
}
.sort li input {
  margin-right: 10px;
}
.sort li > a {
  background-color: @light-red;
  color: #fff;
  border-radius: 2px;
  margin-bottom: 1px;
  &:hover {
    color: #fff;
    background-color: @dark-red;
  }
}

/* Boxes */

.coursebox {
  position: relative;
  overflow: hidden;
  .margin-bottom;
  background-color: #fff;

  > [class^="col-"], > [class*=" col-"] {
    min-height: 204px;
  }
  p {
    margin: 0 0 2px 0;
    button {
      @media only screen and (min-width : @screen-sm-min) {
        margin-right: 20px;
      }
    }
  }
  a {
    color: @dark-gray;
  }
  .box-img {
    margin-bottom: 10px;
    width: 100%;
    min-height: 300px;
    @media only screen and (min-width : @screen-sm-min) {
      min-height: 145px;
    }
    background-position: 50% 50%;
    background-size: cover;
  }
  .rate-btns {
    padding-top: 10px;
    padding-left: 60px;
  }

  div.rate-star {
    margin-right: 20px;
    margin-top: 12px;
  }
  .box-content {
    .box-content-top {
      padding-left: 10px;
      @media only screen and (min-width : @screen-sm-min) {
        min-height: 145px;
        padding: 20px;
        padding-top: 10px;
      }
    }
    .box-content-bottom {
        padding: 19px;
    }
  }


}
/* ... */

